apps/mealie/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: mealie
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
  selector:
    app: mealie
  type: ClusterIP
