apps/mealie/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: mealie
  namespace: mealie
spec:
  rules:
  - host: mealie.kube.home
    http:
      paths:
      - backend:
          service:
            name: mealie-service
            port:
              number: 9000
        path: /
        pathType: Prefix
